# rcadmin

./: .gitignore  conftest.py  factories.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  teste-ansible.txt
base/: forms.py  sanitize_to_import.py  searchs.py  urls.py  utils.py
base/views/: base.py  tools.py
center/: admin.py  forms.py  models.py  urls.py  views.py
center/migrations/: 0004_auto_20210801_1727.py  0006_auto_20220314_1809.py  0008_auto_20220718_0340.py  0009_auto_20220718_0404.py
center/tests/: tests_center_views.py  tests_views__center.py
event/: models.py
event/tests/: tests_event_models.py  tests_event_models_pytest.py  tests_event_views.py  tests_models__activity.py  tests_models__event.py  tests_models__frequency.py  tests_views__activity.py  tests_views__event.py
event/views/: activity.py  event.py  frequencies.py
person/: admin.py  forms.py  models.py  urls.py
person/tests/: tests_models__historic_.py  tests_models__person.py  tests_person_models.py  tests_person_views.py  tests_views__historic.py  tests_views__invitation.py  tests_views__membership_ps.py  tests_views__person.py
person/views/: frequency_ps.py  historic.py  invitation.py  membership_ps.py  person.py  reports.py  tools.py
publicwork/: forms.py  models.py  utils.py
publicwork/migrations/: 0016_auto_20210801_1727.py  0018_auto_20220809_1525.py
publicwork/tests/: tests.py  tests_models__lecture.py  (+5 more)
rcadmin/: common.py  permissions_for_tests.py  settings.py  urls.py
scripts/: import_fields_to_persons.py  import_people.py  import_persons copy.py  import_persons.py  people_to_csv.py  people_to_sign_lgpd.py
treasury/: forms.py  models.py  urls.py
user/: admin.py  forms.py  models.py  urls.py  views.py
workgroup/: forms.py  models.py
(+407 files in other folders)
