[tool.poetry]
name = "rcadmin"
version = "0.2.0"
description = ""
authors = ["Cesar Godoi <cesar.godoi@gmail.com>", "Jady Godoi <jady.s.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
dynaconf = "^3.1.5"
django-crispy-forms = "^1.12.0"
Pillow = "^8.3.2"
qrcode = "^7.3"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
requests = "^2.26.0"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
ipdb = "^0.13.9"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"
pytest-factoryboy = "^2.1.0"
django-rosetta = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
