[tool.poetry]
name = "rcadmin"
version = "0.2.0"
description = ""
authors = ["Cesar Godoi <cesar.godoi@gmail.com>", "Jady Godoi <jady.s.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.*"
dynaconf = "^3.1.7"
django-crispy-forms = "^1.14.0"
Pillow = "^9.0.0"
qrcode = "^7.3.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
requests = "^2.27.1"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
ipdb = "^0.13.9"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"
pytest-factoryboy = "^2.1.0"
django-rosetta = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
